Fix image size on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1153,3 +1153,8 @@ ninja-keys::part(ninja-input) {
 ninja-keys::part(ninja-input-wrapper) {
   background: var(--global-bg-color);
 }
+
+.preview {
+  max-width: 125px;
+  min-width: 125px;
+}
